# application.RadeonProRender-Baikal

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
BaikalStandalone/: CMakeLists.txt
BaikalTest/: CMakeLists.txt
RprTest/: CMakeLists.txt
Tools/scripts/: generate_html.py
